RESOLVED FIXED308921
[Site Isolation] Fix datetime picker positioning in cross-origin iframes
https://bugs.webkit.org/show_bug.cgi?id=308921
Summary [Site Isolation] Fix datetime picker positioning in cross-origin iframes
zak ridouh
Reported 2026-03-01 00:53:53 PST
The date time picker on iOS, macOS and other ports was not properly positioned with site isolation enabled. We need to fix this.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-01 00:53:59 PST
zak ridouh
Comment 2 2026-03-01 00:57:10 PST
EWS
Comment 3 2026-03-11 19:23:14 PDT
Committed 309104@main (826329072b7d): <https://commits.webkit.org/309104@main> Reviewed commits have been landed. Closing PR #59667 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.