[Site Isolation] Fix datetime picker positioning in cross-origin iframes https://bugs.webkit.org/show_bug.cgi?id=308921 rdar://171461287

Reviewed by Aditya Keerthi.

The anchorRectInRootView in DateTimeChooserParameters is
relative to the iframe's root view, but the UI process interprets it
as main-frame coordinates. Add rootFrameID to
DateTimeChooserParameters and use convertRectToMainFrameCoordinates()
 in showDateTimePicker, matching the existing color picker fix. Also
store the frameID on WebDateTimePicker so
didChooseDate/didEndDateTimePicker route responses reliably instead
of using focusedOrMainFrame().

* Source/WebCore/html/BaseDateAndTimeInputType.cpp:
(WebCore::BaseDateAndTimeInputType::setupDateTimeChooserParameters):
* Source/WebCore/platform/DateTimeChooserParameters.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/UIProcess/WebDateTimePicker.cpp:
(WebKit::WebDateTimePicker::showDateTimePicker):
* Source/WebKit/UIProcess/WebDateTimePicker.h:
(WebKit::WebDateTimePicker::frameID const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showDateTimePicker):
(WebKit::WebPageProxy::didChooseDate):
(WebKit::WebPageProxy::didEndDateTimePicker):
* Source/WebKit/UIProcess/gtk/WebDateTimePickerGtk.cpp:
(WebKit::WebDateTimePickerGtk::platformShowDateTimePicker):
(WebKit::WebDateTimePickerGtk::showDateTimePicker):
* Source/WebKit/UIProcess/gtk/WebDateTimePickerGtk.h:
* Source/WebKit/UIProcess/mac/WebDateTimePickerMac.h:
* Source/WebKit/UIProcess/mac/WebDateTimePickerMac.mm:
(WebKit::WebDateTimePickerMac::platformShowDateTimePicker):
(WebKit::WebDateTimePickerMac::showDateTimePicker):

Canonical link: https://commits.webkit.org/309104@main